<resources>
    <string name="app_name">Login</string>

    <string name="inicio">Mathdash</string>

    <!-- PANTALLA LOGIN -->
    <string name="User">Usuari</string>
    <string name="Contra">Contrasenya</string>
    <string name="Entrar">Accedir</string>

    <!-- MENSAJES TOAST -->
    <string name="LoginExito">Bienvenido</string>
    <string name="LoginFallo">Fallo al acceder</string>
    <string name="LoginUser">Usuario no encontrado</string>

    <!-- MENSAJES LOG -->
    <string name="CONEXIONEXITO">CONEXION EXITOSA</string>
    <string name="CONEXIONFALLIDA">CONEXION FALLIDA</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nom">NOM</string>
    <string name="correu_electronic">CORREU ELECTRONIC</string>
    <string name="role">ROLE</string>
    <string name="contrasenya">CONTRASENYA</string>
    <string name="enunciat">Enunciat:</string>
    <string name="dificultat">Dificultat:</string>
    <string name="punts">PUNTS</string>
    <string name="desa">Desa</string>

</resources>